# cricketerstats

./: LICENSE.txt  README.md  pyproject.toml
src/statisticsmaniac.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/statmaniac/: __init__.py  statisticsmaniac.py
